--- a/app/javascript/dashboard/assets/scss/widgets/_modal.scss
+++ b/app/javascript/dashboard/assets/scss/widgets/_modal.scss
@@ -40,7 +40,7 @@
   background-color: $color-white;
   border-radius: $space-small;
   max-height: 100%;
-  overflow: scroll;
+  overflow: auto;
   position: relative;
   width: 60rem;
 
